# 42-sh

./: .mailmap  CMakeLists.txt  Makefile  README.md
doc/: 42sh.man
src/: a.out  ast.c  ast.h  ast.h.gch  lexer.c  lexer.h  main.c  parser.c  try.sh
src/lexer/: Makefile  helper.c  helper.h  lexer.c  lexer.h  main.c  token.c  token.h  token_rec.c  token_rec.h
src/lexer/tests/: functional.c
src/option/: option.c  option.h
src/parser/: ast.c  ast.h  parse_file.c  parse_file.h  parser.c  parser.h
tests/: test.yml
testsuite/: requirements.txt  testsuit.py
